# deep_medical_research_agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  claude-code-sdlc-framework-v2.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json
.claude/agents/: architect.yaml  code-reviewer.yaml  test-writer.yaml
.claude/commands/: create-prompt.md  decompose.md  diagnose.md  gogogo.md  implement.md  interview.md  pr.md  review.md  wrapup.md
.claude/hooks/: branch-guard.sh  lint-python.sh  sdlc-gate.sh
.claude/rules/: code-style.md  error-handling.md  git-workflow.md  security.md  testing.md
.claude/skills/api-design/: SKILL.md
.claude/skills/claude-agent-teams/: SKILL.md
.claude/skills/database-patterns/: SKILL.md
.claude/skills/deployment/: SKILL.md
.claude/skills/langgraph-agents/: SKILL.md
.claude/skills/react-frontend/: SKILL.md
.claude/skills/testing/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  requirements.md
docs/backlog/: dependency-graph.mmd  implementation-order.md
docs/backlog/agent-core/: STORY-003.md  STORY-004.md  STORY-005.md  STORY-006.md
docs/backlog/api/: STORY-007.md  STORY-008.md  STORY-009.md
docs/backlog/foundation/: STORY-001.md  STORY-002.md
docs/backlog/frontend/: STORY-010.md  STORY-011.md  STORY-012.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: HealthIndicator.tsx  HistorySidebar.tsx  Layout.tsx  ProgressLog.tsx  ReportViewer.tsx  ResearchInput.tsx
frontend/src/components/__tests__/: HealthIndicator.test.tsx  HistorySidebar.test.tsx  Layout.test.tsx  ProgressLog.test.tsx  ReportViewer.test.tsx  ResearchInput.test.tsx
frontend/src/hooks/: useReportHistory.ts  useResearch.ts
frontend/src/hooks/__tests__/: useReportHistory.test.ts  useResearch.test.ts
frontend/src/lib/: api-client.ts  reports-api.ts  research-api.ts
frontend/src/lib/__tests__/: api-client.test.ts  reports-api.test.ts  research-api.test.ts
scripts/: validate-template.sh
src/: __main__.py
src/agent/: __init__.py  research_agent.py
src/api/: __init__.py  app.py
src/api/routes/: reports.py  research.py
src/config/: __init__ 2.py  settings.py
src/models/: __init__.py  clients.py
src/services/: __init__.py  report_service.py
src/tools/: __init__.py  medical.py  search.py
tests/: conftest.py
tests/unit/: test_app.py  test_medical_tool.py  test_model_clients.py  test_report_service.py  test_reports_routes.py  test_research_agent.py  test_research_routes.py  test_search_tool.py  test_settings 2.py  test_settings.py
