# ============================================================
# Project Configuration Template
# Customize the [project] section for your application.
# Linting, type-checking, and test config are pre-configured.
# ============================================================

[project]
name = "deep-medical-research-agent"
version = "0.1.0"
description = "AI-powered medical research agent using LangChain Deep Agents with Qwen3 and MedGemma"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.1.0",
    "langchain-ollama>=0.3.0",
    "langchain-tavily>=0.2.17",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic-settings>=2.7.0",
    "python-slugify>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

# ---- Ruff (linter + formatter) ----

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "N",    # pep8-naming
    "UP",   # pyupgrade (modern Python)
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ---- Mypy (type checker) ----

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "pydantic_settings",
    "deepagents",
    "deepagents.*",
    "langchain_ollama",
    "langchain_ollama.*",
    "langchain_tavily",
    "langchain_tavily.*",
    "slugify",
]
ignore_missing_imports = true

# ---- Pytest ----

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests — fast, mocked dependencies",
    "integration: Integration tests — real components, test DB",
    "e2e: End-to-end tests — against deployed service",
    "smoke: Smoke tests — health checks on deployed app",
    "perf: Performance tests — load/stress testing",
]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
]

# ---- Coverage ----

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
